# FRONT_PROJ

./: .gitignore  CMakeLists.txt  README.md  bin_reader.h  create_model.py  custom_net.onnx.data  main.cpp  parser.h  requirements.txt
include/: parser.h
